--- a/token/js/package.json
+++ b/token/js/package.json
@@ -9,6 +9,7 @@
   "testnetDefaultChannel": "v1.2.3",
   "scripts": {
     "start": "babel-node cli/main.js",
+    "bench": "babel-node bench/main.js",
     "lint": "npm run pretty && eslint .",
     "lint:fix": "npm run lint -- --fix",
     "flow": "flow",
